Add Clear Data button to reset stats while keeping BLE connection

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     <span class="btn-icon">📡</span>
                     Connect
                 </button>
+                <button class="btn btn-secondary" id="clearBtn">
+                    🗑️ Clear
+                </button>
                 <button class="btn btn-secondary" id="demoBtn">
                     Demo
                 </button>
